--- a/exCalendar/.project
+++ b/exCalendar/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>study01 (클래스 상속과 인터페이스 복습)</name>
+	<name>exCalendar</name>
 	<comment></comment>
 	<projects>
 	</projects>
